# restart-tool

./: .gitignore  CMakeLists.txt  LICENSE
include/: interface.h  restartHandler.h
src/: interface.cpp  main.cpp  restartHandler.cpp
